# ELM

./: .gitignore  ELM_Training_Analysis.md  ELM_Training_Fixes_Summary.md  README.md  WORKFLOW_CN.md  analyze_training.py  check.py  create_clean_splits.py  create_clean_splits_with_embeddings.py  demo_model.py  environment.yml  extract_split_embeddings.py  fix_data_indices.py  merge_val_test.py  pyproject.toml  summary_demo_model.py  training_analysis.json
Data_Preparation/: QUICKSTART.md  README.md  elm_colab.ipynb  implementation.md
Data_Preparation/data_pipeline/: __init__.py  config.py  dataset.py  download.py  embeddings.py  preprocess.py  utils.py
Data_Preparation/scripts/: example_usage.py  (+2 more)
Data_Synthesis/: README.md
Training/: README.md  __init__.py  debug_generation.py  environment.yml  improve_generation.py  pyproject.toml  test_setup.py  verify_clean_data.py
Training/data/checkpoints/: best_model_meta.json
Training/docs/: summary_training_guide.md  wandb_guide.md
Training/optimization/: bayesian_config.py  bayesian_optimizer.py  bertscore_metrics.py  wandb_tracker.py
Training/scripts/: evaluate.py  filter_summary_data.py  filter_tasks.py  run_bayesian_optimization.py  train.py  train_summary.py
Training/summary_training_pipeline/: __init__.py  adapter.py  config.py  dataset.py  model.py  task_prompts.py  trainer.py  utils.py
Training/tests/: test_prompt_alignment.py
Training/training_pipeline/: adapter.py  checkpoint.py  config.py  dataset.py  model.py  task_prompts.py  trainer.py
scripts/: sort_by_task_type.py  update_checkpoint.py
(+116 files in other folders)
