[project]
name = "elm-training"
version = "0.1.0"
description = "ELM (Embedding Language Model) MLP Adapter Training Pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.51.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "wandb",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
